Fix for weird logotype layout issue

--- a/_sass/_global.scss
+++ b/_sass/_global.scss
@@ -29,16 +29,17 @@
 
   h1 {
     margin: 0;
-    display: inline-flex;
+    
   }
 
   .logotype {
     font-size: 1.1rem;
     font-weight: 500;
+    line-height: 1.3;
     transition: opacity 0.15s cubic-bezier(0.65, 0.05, 0.36, 1);
     will-change: opacity;
-    padding-left: 1.8rem;
     position: relative;
+    display: inline-flex;
 
     &:hover {
       opacity: 0.5;
@@ -46,28 +47,27 @@
 
     @media screen and (min-width: 25em) {
       font-size: 1.3rem;
-      padding-left: 2.2rem;
     }
 
     @media screen and (min-width: 33em) {
       font-size: 1.4rem;
-      padding-left: 2.4rem;
     }
 
     svg {
       width: 1.4rem;
       height: 1.4rem;
-      position: absolute;
-      left: 0;
+      margin-right: 0.4rem;
 
       @media screen and (min-width: 25em) {
         width: 1.6rem;
         height: 1.6rem;
+        margin-right: 0.5rem;
       }
 
       @media screen and (min-width: 33em) {
-        width: 1.8rem;
-        height: 1.8rem;
+        width: 1.75rem;
+        height: 1.75rem;
+        margin-right: 0.6rem;
       }
     }
   }
